# juxtorpus

./: .gitignore  README.md  init.dev.sh  jupyter_notebook_config.py  logging_conf.ini  mvp.ipynb  pyproject.toml  requirements.dev.txt  requirements.txt  runtime.txt  serve.sh  use_cases.md
assets/samples/: elonmusk_tweets.csv  tweetsA.csv  tweetsB.csv
benchmarks/: _memory.ipynb  _perf.ipynb  perf_csr_csc.py
juxtorpus/: __init__.py  corpus.py  jux.py  loader.py  slicer.py
juxtorpus/checks/: __init__.py
juxtorpus/components/: __init__.py  hashtags.py
juxtorpus/corpus/: __init__.py  app.py  builder.py  corpora.py  corpus.py  dtm.py  freqtable.py  operation.py  operations.py  slicer.py  topic_model.py  viz.py
juxtorpus/features/: concordance.py  keywords.py  polarity.py  similarity.py  zipf.py
juxtorpus/interfaces/: __init__.py  clonable.py  container.py  serialisable.py
juxtorpus/maskers/: __init__.py
juxtorpus/matchers/: __init__.py
juxtorpus/meta/: __init__.py
juxtorpus/pipes/: __init__.py
juxtorpus/processors/: __init__.py  spacy_processor.py
juxtorpus/stats/: __init__.py  chi_squared.py  stats.py  (+2 more)
loader/: __init__.py  handlers.py
notebooks/: concordance.ipynb  fileupload.ipynb  mvp.ipynb  processing.ipynb  tweets.ipynb
scripts/: quintiles_to_csv.py
tests/: test_builder.py  test_corpus.py  test_corpus_slicer.py  test_deduplicated_dir.py  test_dtm.py  test_jux.py  test_jux_similarity.py  test_loader.py  test_loglikelihood.py  test_maskers.py  test_pipelines.py  test_polarity.py  test_slicer.py  test_spacy_corpus.py  test_spacy_processor.py
(+37 files in other folders)
